stack is working

--- a/project2/makefile
+++ b/project2/makefile
@@ -4,17 +4,11 @@ CFLAGS= --std=c++11 -Wall -g
 
 build: $(TARGET)
 
-$(TARGET): main.o person.o queue.o stack.o node.o
-	$(CC) $(CFLAGS) -o $(TARGET) main.o person.o queue.o stack.o node.o
+$(TARGET): main.o person.o
+	$(CC) $(CFLAGS) -o $(TARGET) main.o person.o
 
-main.o: main.cpp main.h
+main.o: main.cpp main.h stack.h queue.h person.o
 	$(CC) $(CFLAGS) -c main.cpp
-queue.o: queue.cpp queue.h
-	$(CC) $(CFLAGS) -c queue.cpp
-node.o: node.cpp node.h
-	$(CC) $(CFLAGS) -c node.cpp
-stack.o: stack.cpp stack.h
-	$(CC) $(CFLAGS) -c stack.cpp
 person.o: person.cpp person.h
 	$(CC) $(CFLAGS) -c person.cpp
 
@@ -22,4 +16,4 @@ check:
 	valgrind --leak-check=full ./$(TARGET)
 
 clean:
-	rm $(TARGET) main.o person.o queue.o stack.o node.o
+	rm $(TARGET) main.o person.o
