--- a/project2/makefile
+++ b/project2/makefile
@@ -7,7 +7,7 @@ build: $(TARGET)
 $(TARGET): main.o person.o
 	$(CC) $(CFLAGS) -o $(TARGET) main.o person.o
 
-main.o: main.cpp main.h stack.h queue.h person.o
+main.o: main.cpp main.h stack.h queue.h node.h person.o
 	$(CC) $(CFLAGS) -c main.cpp
 person.o: person.cpp person.h
 	$(CC) $(CFLAGS) -c person.cpp
