tree visualization working

--- a/project4/.vscode/settings.json
+++ b/project4/.vscode/settings.json
@@ -61,6 +61,8 @@
         "typeindex": "cpp",
         "typeinfo": "cpp",
         "valarray": "cpp",
-        "*.ipp": "cpp"
+        "*.ipp": "cpp",
+        "condition_variable": "cpp",
+        "mutex": "cpp"
     }
 }
