--- a/project4/makefile
+++ b/project4/makefile
@@ -7,7 +7,7 @@ build: $(TARGET)
 $(TARGET): main.o website.o
 	$(CC) $(CFLAGS) -o $(TARGET) main.o website.o string.o
 
-main.o: main.cpp main.hpp redblacktree.hpp redblacktreenode.hpp list.hpp website.o
+main.o: main.cpp main.hpp avltree.hpp avltreenode.hpp list.hpp website.o
 	$(CC) $(CFLAGS) -c main.cpp
 website.o: website.cpp website.hpp string.o
 	$(CC) $(CFLAGS) -c website.cpp
